fix jQuery for navigation mobile menu

--- a/main-style.css
+++ b/main-style.css
@@ -124,8 +124,7 @@ header{
     display: none;
   }
   .full-nav{
-    background: blue;
-    color: white;
+    background: white;
     width: 100vw;
     height: 100vh;
     text-align: center;
